# backend/api/api-company.go
@@ -10,14 +10,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary post new role in db
+// @Summary post new company in db
 // @Schemes
-// @Description post new role in db
+// @Description post new company in db
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.Role
-// @Router /api/role [post]
-func (a *App) AddRole(c *gin.Context) {
+// @Success 200 {object} models.Company
+// @Router /api/company [post]
+func (a *App) AddCompany(c *gin.Context) {
 	jsonData, err := io.ReadAll(c.Request.Body)
 	if err != nil {
 		log.Printf("[error] Failed to read body: %v", err)
@@ -25,8 +25,8 @@ func (a *App) AddRole(c *gin.Context) {
 		return
 	}
 
-	var r models.Role
-	err = json.Unmarshal(jsonData, &r)
+	var comp models.Company
+	err = json.Unmarshal(jsonData, &comp)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": err,
@@ -34,42 +34,41 @@ func (a *App) AddRole(c *gin.Context) {
 		return
 	}
 
-	if r.Title == "" {
+	if comp.Title == "" {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "Empty title",
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, r)
+	c.JSON(http.StatusOK, comp)
 }
 
-// @Summary get all roles in db
+// @Summary get all companies in db
 // @Schemes
-// @Description get all roles in db
+// @Description get all companies in db
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.Roles
-// @Router /api/role/list [get]
-func (a *App) GetRoles(c *gin.Context) {
-	r := []models.Role{
-		{Id: 1, Title: "Teamlead"},
-		{Id: 2, Title: "Frontend-разработчик"},
-		{Id: 3, Title: "Backend-разработчик"},
-		{Id: 4, Title: "ML-инженер"},
+// @Success 200 {object} models.Companies
+// @Router /api/company/list [get]
+func (a *App) GetCompanies(c *gin.Context) {
+	comp := models.Companies{
+		{Id: 1, Title: "Яндекс"},
+		{Id: 2, Title: "ВК"},
+		{Id: 3, Title: "Тинькофф"},
 	}
 
-	c.JSON(http.StatusOK, r)
+	c.JSON(http.StatusOK, comp)
 }
 
-// @Summary delete role in db
+// @Summary delete company in db
 // @Schemes
-// @Description delete role in db
+// @Description delete company in db
 // @Accept json
 // @Produce json
-// @Success 200 {object} models.Role
-// @Router /api/role [delete]
-func (a *App) DeleteRole(c *gin.Context) {
+// @Success 200 {object} models.Company
+// @Router /api/company [delete]
+func (a *App) DeleteCompany(c *gin.Context) {
 	jsonData, err := io.ReadAll(c.Request.Body)
 	if err != nil {
 		log.Printf("[error] Failed to read body: %v", err)
@@ -77,8 +76,8 @@ func (a *App) DeleteRole(c *gin.Context) {
 		return
 	}
 
-	var r models.Role
-	err = json.Unmarshal(jsonData, &r)
+	var comp models.Company
+	err = json.Unmarshal(jsonData, &comp)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": err,
@@ -86,12 +85,12 @@ func (a *App) DeleteRole(c *gin.Context) {
 		return
 	}
 
-	if r.Title == "" {
+	if comp.Title == "" {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"error": "Empty title",
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, r)
+	c.JSON(http.StatusOK, comp)
 }
