# backend/api/models/technology.go
@@ -4,3 +4,5 @@ type Techonology struct {
 	Id    uint64 `json:"id" yaml:"id"`
 	Title string `json:"title" yaml:"title"`
 }
+
+type Technologies []Techonology
