# backend/cmd/app/main.go
@@ -37,6 +37,10 @@ func main() {
 	r.GET("/api/technology/list", a.GetTechnologies)
 	r.DELETE("/api/technology", a.DeleteTechnology)
 
+	r.POST("/api/company", a.AddCompany)
+	r.GET("/api/company/list", a.GetCompanies)
+	r.DELETE("/api/company", a.DeleteCompany)
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.Run() // listen and serve on 0.0.0.0:8080 (for windows "localhost:8080")
 }
